[package]
name = "loom"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.7"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
